k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lista-tarefas

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: lista-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pfabianofilho/front-lista-tarefas:v1
          ports:
            - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lista-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: pfabianofilho/back-lista-tarefas:v1
          ports:
            - containerPort: 8080

---

# Service do Frontend da aplicação
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: lista-tarefas
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP 

---

# Service do Backend da aplicação
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: lista-tarefas
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-lista-tarefas
  namespace: lista-tarefas
spec: 
  rules:
    - host: lista-tarefas.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: 
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port: 
                  number: 8080
